Add more layout

--- a/docs/_includes/content/pro.html
+++ b/docs/_includes/content/pro.html
@@ -10,6 +10,11 @@
     </p>
     <div class="bd-pro-content">
       {{ include.content | markdownify }}
+
+      {% if include.title == 'No JavaScript' %}
+        {% assign tweet = site.data.love.tweetsById.860885116909998080 %}
+        {% include elements/tw.html tweet=tweet modifier='bd-is-grey' %}
+      {% endif %}
     </div>
   </div>
 </article>
