--- a/docs/_includes/footer/boxes.html
+++ b/docs/_includes/footer/boxes.html
@@ -1,12 +1,12 @@
-{% assign boostrap_link = site.data.links.by_id['boostrap'] %}
+{% assign bootstrap_link = site.data.links.by_id['bootstrap'] %}
 {% assign expo_link = site.data.links.by_id['expo'] %}
 {% assign love_link = site.data.links.by_id['love'] %}
 
 <div class="bd-footer-stars">
-  <a class="bd-footer-star bd-is-bootstrap" href="{{ site.url }}{{ boostrap_link.path }}">
+  <a class="bd-footer-star bd-is-bootstrap" href="{{ site.url }}{{ bootstrap_link.path }}">
     <header class="bd-footer-star-header">
       <h4 class="bd-footer-title">
-        <strong>Coming from Bootstrap</strong>
+        <strong>{{ bootstrap_link.name }}</strong>
       </h4>
       <p class="bd-footer-subtitle">
         An alternative to Bootstrap
@@ -21,10 +21,10 @@
   <a class="bd-footer-star bd-is-expo" href="{{ site.url }}{{ expo_link.path }}">
     <header class="bd-footer-star-header">
       <h4 class="bd-footer-title">
-        <span class="icon has-text-star">
-          <i class="fas fa-star"></i>
+        <span class="icon has-text-{{ expo_link.color }}">
+          <i class="fas fa-{{ expo_link.icon }}"></i>
         </span>
-        <strong>Expo</strong>
+        <strong>{{ expo_link.name }}</strong>
       </h4>
       <p class="bd-footer-subtitle">
         See what you can build with Bulma
@@ -35,10 +35,10 @@
   <a class="bd-footer-star bd-is-love" href="{{ site.url }}{{ love_link.path }}">
     <header class="bd-footer-star-header">
       <h4 class="bd-footer-title">
-        <span class="icon has-text-danger">
-          <i class="fas fa-heart"></i>
+        <span class="icon has-text-{{ love_link.color }}">
+          <i class="fas fa-{{ love_link.icon }}"></i>
         </span>
-        <strong>Love</strong>
+        <strong>{{ love_link.name }}</strong>
       </h4>
       <p class="bd-footer-subtitle">
         Fans of Bulma
