--- a/docs/_includes/layout/main-close.html
+++ b/docs/_includes/layout/main-close.html
@@ -7,7 +7,7 @@
 
       <aside class="bd-side">
         {% if include.show_categories %}
-          {% include elements/categories-nav.html %}
+          {% include components/categories.html %}
         {% endif %}
       </aside>
     </div>
