--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -12212,27 +12212,8 @@ svg {
   }
 }
 
-.bd-bootstrap .hero {
-  background-color: #6f5499;
-  color: #fff;
-}
-
-.bd-bootstrap .hero .title,
-.bd-bootstrap .hero .subtitle {
-  color: currentColor;
-}
-
-.bd-bootstrap .hero .subtitle {
-  color: rgba(255, 255, 255, 0.5);
-}
-
-.bd-bootstrap .hero .subtitle a {
-  border-bottom: 1px solid currentColor;
-  color: currentColor;
-}
-
-.bd-bootstrap .hero .subtitle a:hover {
-  color: #fff;
+.bd-bootstrap-table {
+  margin: 3rem 0;
 }
 
 .bd-pros-heading {
@@ -12281,28 +12262,23 @@ svg {
   color: #6f5499;
 }
 
-.bd-separator {
-  color: #dbdbdb;
-  margin: 0 0.25em;
-}
-
-.bd-comparison {
+.bd-bootstrap-comparison {
   margin: 0 auto;
   max-width: 42rem;
 }
 
-.bd-comparison .table {
+.bd-bootstrap-comparison .table {
   color: #ff3860;
 }
 
-.bd-comparison .table thead th,
-.bd-comparison .table tfoot th {
+.bd-bootstrap-comparison .table thead th,
+.bd-bootstrap-comparison .table tfoot th {
   font-size: 1.5rem;
   text-align: center;
 }
 
-.bd-comparison .table thead svg,
-.bd-comparison .table tfoot svg {
+.bd-bootstrap-comparison .table thead svg,
+.bd-bootstrap-comparison .table tfoot svg {
   height: 1.5rem;
   margin-right: 1rem;
   position: relative;
@@ -12310,36 +12286,36 @@ svg {
   width: auto;
 }
 
-.bd-comparison .table tbody th {
+.bd-bootstrap-comparison .table tbody th {
   font-size: 1.25rem;
   text-align: center;
 }
 
-.bd-comparison .table tbody td {
+.bd-bootstrap-comparison .table tbody td {
   font-family: monospace;
   width: 50%;
 }
 
-.bd-comparison .table tbody a {
+.bd-bootstrap-comparison .table tbody a {
   color: currentColor;
 }
 
-.bd-comparison .table tbody a:hover {
+.bd-bootstrap-comparison .table tbody a:hover {
   text-decoration: underline;
 }
 
-.bd-comparison .table .bd-is-empty {
+.bd-bootstrap-comparison .table .bd-is-empty {
   background-color: whitesmoke;
   color: #7a7a7a;
 }
 
-.bd-comparison .table .bd-is-unique {
+.bd-bootstrap-comparison .table .bd-is-unique {
   background-color: rgba(35, 209, 96, 0.25);
   color: #363636;
   font-weight: 700;
 }
 
-.bd-comparison-header {
+.bd-bootstrap-comparison-header {
   margin-bottom: 3rem;
 }
 
