--- a/docs/_includes/index/start.html
+++ b/docs/_includes/index/start.html
@@ -1,4 +1,4 @@
-{% assign docs_link = site.data.links.by_id['documentation'] %}
+{% assign docs_link = site.data.links.by_id['overview-start'] %}
 {% assign docs_url = site.url | append: docs_link.path %}
 
 <section class="section is-large">
@@ -6,9 +6,12 @@
     <header class="bd-index-header">
       <h3 class="title is-3">
         <a href="{{ docs_url }}">
-          And <strong>much more!</strong>
+          And so <strong>much more</strong>
         </a>
       </h3>
+      <h4 class="subtitle is-4">
+        Join more than <strong>100,000</strong> developers
+      </h4>
     </header>
 
     <div class="hero-buttons">
