--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -10,35 +10,38 @@
   color: $text-light
   display: block
   font-size: $size-5
-  padding: 1rem 3rem 1.5rem
+  padding: 1rem 3rem 1.5rem 5rem
+  position: relative
   transition-duration: $speed
   transition-property: background-color, color
   strong
     font-weight: $weight-semibold
   &:hover
     background-color: $white-bis
-  &.bd-is-post
-    padding-left: 5rem
 
 .bd-link-name
   line-height: 1.25
   margin-bottom: 0.25em
   position: relative
 
+.bd-link-figure
+  position: absolute
+  right: calc(100% + 0.5em)
+  text-align: center
+  top: 0
+  min-width: 1.5em
+
 .bd-link-counter
   color: $link
+  display: block
   counter-increment: bd-links
   font-weight: $weight-normal
-  position: absolute
-  right: calc(100% + 0.625em)
   &::before
     content: counter(bd-links)
 
 .bd-link-icon
+  display: block
   font-size: 2rem
-  position: absolute
-  right: calc(100% + 0.5em)
-  text-align: center
   width: 1.5em
 
 +desktop
