--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -37,6 +37,9 @@
   .bd-partners-list
     align-items: flex-start
     display: flex
+    margin-left: auto
+    margin-right: auto
+    max-width: 1130px
   .bd-partner
     &.bd-is-sponsor
       flex-grow: 1
