--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6426,6 +6426,10 @@ body.has-navbar-fixed-bottom {
   min-height: 3.25rem;
 }
 
+.navbar-brand a.navbar-item:hover {
+  background-color: transparent;
+}
+
 .navbar-tabs {
   -webkit-overflow-scrolling: touch;
   max-width: 100vw;
@@ -6510,7 +6514,7 @@ a.navbar-item:hover, a.navbar-item.is-active,
 }
 
 .navbar-item {
-  display: flex;
+  display: block;
   flex-grow: 0;
   flex-shrink: 0;
 }
@@ -6573,10 +6577,10 @@ a.navbar-item:hover, a.navbar-item.is-active,
 }
 
 .navbar-divider {
-  background-color: #dbdbdb;
+  background-color: whitesmoke;
   border: none;
   display: none;
-  height: 1px;
+  height: 2px;
   margin: 0.5rem 0;
 }
 
@@ -6662,6 +6666,9 @@ a.navbar-item:hover, a.navbar-item.is-active,
   .navbar-item,
   .navbar-link {
     align-items: center;
+    display: flex;
+  }
+  .navbar-item {
     display: flex;
   }
   .navbar-item.has-dropdown {
@@ -10623,6 +10630,19 @@ svg {
   color: white;
 }
 
+#moreDropdown .navbar-item {
+  padding-left: 3em;
+  position: relative;
+}
+
+#moreDropdown .icon {
+  left: 1rem;
+  position: absolute;
+  text-align: center;
+  top: 0.375rem;
+  width: 1em;
+}
+
 #moreDropdownBootstrap .icon {
   color: #6f5499;
 }
@@ -10639,7 +10659,7 @@ svg {
     white-space: normal;
   }
   #moreDropdown {
-    width: 18rem;
+    width: 14rem;
   }
   #moreDropdown .navbar-item {
     padding-right: 1rem;
@@ -10916,7 +10936,8 @@ svg {
   color: #7a7a7a;
   display: block;
   font-size: 1.25rem;
-  padding: 1rem 3rem 1.5rem;
+  padding: 1rem 3rem 1.5rem 5rem;
+  position: relative;
   transition-duration: 86ms;
   transition-property: background-color, color;
 }
@@ -10929,22 +10950,25 @@ svg {
   background-color: #fafafa;
 }
 
-.bd-link.bd-is-post {
-  padding-left: 5rem;
-}
-
 .bd-link-name {
   line-height: 1.25;
   margin-bottom: 0.25em;
   position: relative;
 }
 
+.bd-link-figure {
+  position: absolute;
+  right: calc(100% + 0.5em);
+  text-align: center;
+  top: 0;
+  min-width: 1.5em;
+}
+
 .bd-link-counter {
   color: #3273dc;
+  display: block;
   counter-increment: bd-links;
   font-weight: 400;
-  position: absolute;
-  right: calc(100% + 0.625em);
 }
 
 .bd-link-counter::before {
@@ -10952,10 +10976,8 @@ svg {
 }
 
 .bd-link-icon {
+  display: block;
   font-size: 2rem;
-  position: absolute;
-  right: calc(100% + 0.5em);
-  text-align: center;
   width: 1.5em;
 }
 
@@ -12480,6 +12502,9 @@ svg {
   .bd-partners-list {
     align-items: flex-start;
     display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1130px;
   }
   .bd-partner.bd-is-sponsor {
     flex-grow: 1;
