--- a/docs/_includes/components/links.html
+++ b/docs/_includes/components/links.html
@@ -13,22 +13,16 @@
       {% assign thingy = link_id[0] %}
       {% assign link = site.data.links.by_id[thingy] %}
     {% endif %}
-    <a class="bd-link" href="{{ site.url }}{{ link.path }}">
-      <h2 class="bd-link-name">
-        <figure class="bd-link-figure">
-          {% if include.icons %}
-            <span class="bd-link-icon has-text-{{ link.color }}">
-              <i class="{% if link.icon_brand %}fab{% elsif link.icon_regular %}far{% else %}fas{% endif %} fa-{{ link.icon }}"></i>
-            </span>
-          {% else %}
-            <span class="bd-link-counter"></span>
-          {% endif %}
-        </figure>
-        {{ link.name }}
-      </h2>
-      <p class="bd-link-subtitle">
-        {{ link.subtitle }}
-      </p>
-    </a>
+    {% assign link_url = site.url | append: link.path %}
+    {%
+      include elements/link.html
+      url=link_url
+      color=link.color
+      icon_brand=link.icon_brand
+      icon_regular=link.icon_regular
+      icon=link.icon
+      name=link.name
+      subtitle=link.subtitle
+    %}
   {% endfor %}
 </nav>
