Fix book banner

--- a/docs/_includes/book/book-banner.html
+++ b/docs/_includes/book/book-banner.html
@@ -1,5 +1,5 @@
 <section id="bulma-book" class="bd-book-banner hero is-medium">
-  <div class="bd-book-pattern"></div>
+  <!-- <div class="bd-book-pattern"></div> -->
   <div class="hero-body">
     <div class="container">
       <div class="bd-book-columns">
