--- a/docs/_includes/global/newsletter.html
+++ b/docs/_includes/global/newsletter.html
@@ -10,7 +10,7 @@
         <form action="https://mail.jgthms.com/subscribe" method="POST" accept-charset="utf-8">
             <div class="field is-grouped">
               <div class="control has-icons-left is-expanded">
-                <input type="email" value="" name="email" class="input is-flat required email" placeholder="email address" required>
+                <input type="email" value="" name="email" class="input is-medium is-flat" placeholder="email address" required>
                 <span class="icon is-small is-left">
                   <i class="fas fa-envelope"></i>
                 </span>
@@ -20,7 +20,7 @@
                   <input type="text" name="hp" id="hp">
                 </div>
                 <input type="hidden" name="list" value="So5UY3O9gHJkq892bn763Tyf4A">
-                <button class="button is-link">
+                <button class="button is-medium is-link">
                   <strong>Subscribe</strong>
                 </button>
               </div>
