--- a/docs/_includes/index/js.html
+++ b/docs/_includes/index/js.html
@@ -19,7 +19,7 @@
 
       <div class="column">
         <div class="bd-index-js-tweet">
-          {% assign tweet = site.data.love.tweetsById.860885116909998080 %}
+          {% assign tweet = site.data.love.tweets_by_id.860885116909998080 %}
           {% include elements/tw.html tweet=tweet modifier='bd-is-grey' %}
         </div>
       </div>
