--- a/docs/_includes/index/modifiers.html
+++ b/docs/_includes/index/modifiers.html
@@ -15,7 +15,7 @@
           </h4>
         </header>
 
-        {% assign tweet = site.data.love.tweetsById.868829487072464897 %}
+        {% assign tweet = site.data.love.tweets_by_id.868829487072464897 %}
         {% include elements/tw.html tweet=tweet modifier='bd-is-grey' %}
       </div>
 
