--- a/docs/_sass/footer.sass
+++ b/docs/_sass/footer.sass
@@ -29,10 +29,7 @@
   margin-top: 1.5rem
 
 %bd-footer-box
-  background-color: $white
-  border-radius: $radius-large
-  box-shadow: 0 1.5rem 1.5rem -1.25rem rgba($black, 0.1)
-  display: block
+  @extend %bd-box
   text-align: center
   .bd-footer-title
     font-size: 1.5rem
