--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -25,10 +25,18 @@ $intro-width: 1080px
 
 $navbar-item-img-max-height: none
 
+@import "../bulma"
+
 %center
   align-items: center
   display: flex
   justify-content: center
+
+%bd-box
+  background-color: $white
+  border-radius: $radius-large
+  box-shadow: 0 1.5rem 1.5rem -1.25rem rgba($black, 0.1)
+  display: block
 
 =selection($current-selector: false)
   @if $current-selector
@@ -42,7 +50,6 @@ $navbar-item-img-max-height: none
     \::selection
       @content
 
-@import "../bulma"
 @import "./_sass/main"
 @import "./_sass/highlight"
 @import "./_sass/override"
