--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1,10 +1,4 @@
 @charset "UTF-8";
-.bd-columns-tool, .bd-footer-donation-action, .bd-footer-star-figure {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
 /*! bulma.io v0.6.2 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
@@ -9496,6 +9490,19 @@ label.panel-block:hover {
   padding: 3rem 1.5rem 6rem;
 }
 
+.bd-columns-tool, .bd-footer-donation-action, .bd-footer-star-figure {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.bd-footer-support, .bd-footer-star, .bd-book-content {
+  background-color: white;
+  border-radius: 6px;
+  box-shadow: 0 1.5rem 1.5rem -1.25rem rgba(10, 10, 10, 0.1);
+  display: block;
+}
+
 .bd-main {
   overflow: hidden;
   position: relative;
@@ -10711,10 +10718,6 @@ svg {
 }
 
 .bd-footer-support, .bd-footer-star {
-  background-color: white;
-  border-radius: 6px;
-  box-shadow: 0 1.5rem 1.5rem -1.25rem rgba(10, 10, 10, 0.1);
-  display: block;
   text-align: center;
 }
 
@@ -12537,7 +12540,7 @@ svg {
 }
 
 .bd-book-banner {
-  background-color: white;
+  background-color: #00d1b2;
   position: relative;
 }
 
@@ -12575,8 +12578,6 @@ svg {
 }
 
 .bd-book-content {
-  background-color: white;
-  box-shadow: 0 40px 40px -20px rgba(10, 10, 10, 0.1);
   max-width: 520px;
   padding: 3rem;
 }
