--- a/docs/_includes/elements/tws.html
+++ b/docs/_includes/elements/tws.html
@@ -1,21 +1,21 @@
 <div class="container">
   <div class="columns">
     <div class="column is-4">
-      {% assign tweet = site.data.love.tweetsById.910956939886043136 %}{% include elements/tw.html tweet=tweet%}
-      {% assign tweet = site.data.love.tweetsById.912690697416753152 %}{% include elements/tw.html tweet=tweet%}
-      {% assign tweet = site.data.love.tweetsById.834140257054502913 %}{% include elements/tw.html tweet=tweet%}
+      {% assign tweet = site.data.love.tweets_by_id.910956939886043136 %}{% include elements/tw.html tweet=tweet%}
+      {% assign tweet = site.data.love.tweets_by_id.912690697416753152 %}{% include elements/tw.html tweet=tweet%}
+      {% assign tweet = site.data.love.tweets_by_id.834140257054502913 %}{% include elements/tw.html tweet=tweet%}
     </div>
 
     <div class="column is-4">
-      {% assign tweet = site.data.love.tweetsById.869284735440363520 %}{% include elements/tw.html tweet=tweet%}
-      {% assign tweet = site.data.love.tweetsById.835834634655174658 %}{% include elements/tw.html tweet=tweet%}
-      {% assign tweet = site.data.love.tweetsById.874925154475929602 %}{% include elements/tw.html tweet=tweet%}
+      {% assign tweet = site.data.love.tweets_by_id.869284735440363520 %}{% include elements/tw.html tweet=tweet%}
+      {% assign tweet = site.data.love.tweets_by_id.835834634655174658 %}{% include elements/tw.html tweet=tweet%}
+      {% assign tweet = site.data.love.tweets_by_id.874925154475929602 %}{% include elements/tw.html tweet=tweet%}
     </div>
 
     <div class="column is-4">
-      {% assign tweet = site.data.love.tweetsById.915580081938018304 %}{% include elements/tw.html tweet=tweet%}
-      {% assign tweet = site.data.love.tweetsById.903629781744439297 %}{% include elements/tw.html tweet=tweet%}
-      {% assign tweet = site.data.love.tweetsById.909653512010833920 %}{% include elements/tw.html tweet=tweet%}
+      {% assign tweet = site.data.love.tweets_by_id.915580081938018304 %}{% include elements/tw.html tweet=tweet%}
+      {% assign tweet = site.data.love.tweets_by_id.903629781744439297 %}{% include elements/tw.html tweet=tweet%}
+      {% assign tweet = site.data.love.tweets_by_id.909653512010833920 %}{% include elements/tw.html tweet=tweet%}
     </div>
   </div>
 
