--- a/docs/_includes/global/native.html
+++ b/docs/_includes/global/native.html
@@ -59,7 +59,7 @@
       }
 
       .native-cta:hover {
-        color: #native_cta_color_hover;
+        color: #native_cta_color_hover#;
         background-color: #native_cta_bg_color_hover#;
       }
     </style>
@@ -70,6 +70,6 @@
         <span class="native-desc">#native_desc#</span>
       </div>
     </div>
-    <span class="native-cta">#native_cta#</span>
+    <span class="button is-medium native-cta">#native_cta#</span>
   </a>
 </div>
