--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -12754,6 +12754,11 @@ svg {
   text-decoration: none;
 }
 
+.native-flex:hover .native-cta {
+  box-shadow: 0 1rem 2rem 0 rgba(10, 10, 10, 0.1);
+  transform: translateY(-0.25rem);
+}
+
 .native-img {
   border-radius: 3px;
   flex-grow: 0;
@@ -12788,24 +12793,15 @@ svg {
 
 .native-cta {
   border: none;
-  border-radius: 3px;
-  box-shadow: 0 6px 13px 0 rgba(0, 0, 0, 0.15);
-  display: inline-block;
+  box-shadow: 0 0.5rem 1rem 0 rgba(10, 10, 10, 0.2);
   flex-grow: 0;
   flex-shrink: 0;
-  font-size: 0.75em;
-  font-weight: 400;
-  padding: 0.75em 1em;
-  text-transform: uppercase;
-  transform: translateY(-1px);
-  transition: transform .3s ease-in-out;
-  vertical-align: top;
-  white-space: nowrap;
-}
-
-.native-cta:hover {
-  box-shadow: none;
-  transform: translateY(1px);
+  font-weight: 600;
+  height: auto;
+  padding: 0.5em 1em;
+  transition-duration: 172ms;
+  transition-property: box-shadow, transform;
+  will-change: box-shadow, transform;
 }
 
 @media screen and (max-width: 599px) {
