--- a/docs/_includes/elements/anchor.html
+++ b/docs/_includes/elements/anchor.html
@@ -1,7 +1,9 @@
 <hr class="hr" style="margin-bottom: 0;">
 
 <h3 id="{{ include.name | slugify }}" class="title is-4 is-spaced bd-anchor-title">
-  {{ include.name }}
+  <span class="bd-anchor-name">
+    {{ include.name }}
+  </span>
   <a class="bd-anchor-link" href="#{{ include.name | slugify }}">
     #
   </a>
