--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -85,6 +85,7 @@ route: documentation
       <aside class="bd-side">
         {% unless page.hide_categories %}
           {% include components/categories.html %}
+          {% include components/anchors.html %}
         {% endunless %}
       </aside>
     </div>
