--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9604,6 +9604,26 @@ label.panel-block:hover {
   top: 0;
 }
 
+.bd-category-list, .bd-anchors-list {
+  font-size: 0.875rem;
+}
+
+.bd-category-list li:not(:last-child), .bd-anchors-list li:not(:last-child) {
+  margin-bottom: 0.5em;
+}
+
+.bd-category-list li.is-current a, .bd-anchors-list li.is-current a {
+  color: #3273dc;
+}
+
+.bd-category-list a, .bd-anchors-list a {
+  color: #7a7a7a;
+}
+
+.bd-category-list a:hover, .bd-anchors-list a:hover {
+  color: #3273dc;
+}
+
 .bd-category a:hover {
   color: #3273dc;
 }
@@ -9645,20 +9665,31 @@ label.panel-block:hover {
 
 .bd-category-list {
   display: none;
-  font-size: 0.875rem;
   padding: 0.5rem;
 }
 
-.bd-category-list li:not(:last-child) {
-  margin-bottom: 0.5em;
+.bd-anchors-reference {
+  height: 1px;
 }
 
-.bd-category-list li.is-current a {
-  color: #3273dc;
+.bd-anchors {
+  padding-top: calc(1.5rem - 1px);
 }
 
-.bd-category-list a {
-  color: #7a7a7a;
+.bd-anchors.is-pinned {
+  position: fixed;
+  top: 0;
+}
+
+.bd-anchors-title {
+  color: #b5b5b5;
+  font-size: 0.875rem;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+
+.bd-anchors-list li:last-child {
+  margin-top: 1em;
 }
 
 @media screen and (max-width: 1087px) {
