--- a/docs/_includes/elements/improve-page.html
+++ b/docs/_includes/elements/improve-page.html
@@ -1,4 +1,4 @@
-<div class="bd-typo">
+<div id="typo" class="bd-typo">
   <p class="has-text-grey-light">
     <a href="{{ site.url }}/made-with-bulma/">
       <img src="{{ site.url }}/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
