--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -82,6 +82,9 @@
   li
     &:not(:last-child)
       margin-bottom: 0.5em
+    &.is-past
+      a
+        color: $grey-light
     &.is-current
       a
         color: $link
@@ -132,9 +135,10 @@
 
 .bd-anchors
   padding-top: calc(1.5rem - 1px)
-  &.is-pinned
-    position: fixed
-    top: 0
+  +tablet
+    &.is-pinned
+      position: fixed
+      top: 0
 
 .bd-anchors-title
   color: $grey-light
@@ -147,6 +151,8 @@
   li
     &:last-child
       margin-top: 1em
+  a
+    color: $text-strong
 
 +touch
   .bd-lead,
