--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9612,6 +9612,10 @@ label.panel-block:hover {
   margin-bottom: 0.5em;
 }
 
+.bd-category-list li.is-past a, .bd-anchors-list li.is-past a {
+  color: #b5b5b5;
+}
+
 .bd-category-list li.is-current a, .bd-anchors-list li.is-current a {
   color: #3273dc;
 }
@@ -9676,9 +9680,11 @@ label.panel-block:hover {
   padding-top: calc(1.5rem - 1px);
 }
 
-.bd-anchors.is-pinned {
-  position: fixed;
-  top: 0;
+@media screen and (min-width: 769px), print {
+  .bd-anchors.is-pinned {
+    position: fixed;
+    top: 0;
+  }
 }
 
 .bd-anchors-title {
@@ -9690,6 +9696,10 @@ label.panel-block:hover {
 
 .bd-anchors-list li:last-child {
   margin-top: 1em;
+}
+
+.bd-anchors-list a {
+  color: #363636;
 }
 
 @media screen and (max-width: 1087px) {
