Add spaced navbar

--- a/docs/_includes/global/scripts.html
+++ b/docs/_includes/global/scripts.html
@@ -6,11 +6,11 @@
   <script src="https://player.vimeo.com/api/player.js" ></script>
   <script type="text/javascript" src="{{ site.url }}/lib/index.js?v={{ site.time | date: '%Y%m%d%H%M' }}"></script>
   <script>
-    WebFont.load({
+    WebFontConfig = {
       google: {
         families: ['Nunito:400,700']
       }
-    });
+    };
     (function(d) {
       var wf = d.createElement('script'), s = d.scripts[0];
       wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js';
