--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -1,4 +1,4 @@
-<nav id="navbar" class="navbar">
+<nav id="navbar" class="navbar is-spaced">
   <div class="container">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.url }}">
@@ -47,7 +47,7 @@
         <a class="navbar-link" href="{{ site.url }}{{ link.path }}">
           {{ link.name }}
         </a>
-        <div id="moreDropdown" class="navbar-dropdown is-boxed">
+        <div id="moreDropdown" class="navbar-dropdown">
           {% for link_id in site.data.links.more %}
             {% assign link = site.data.links.by_id[link_id] %}
             <a class="navbar-item {% if page.route == link_id %}is-active{% endif %}" href="{{ site.url }}/{{ link.path }}">
