Add more link icons

--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -134,8 +134,12 @@
   height: 1px
 
 .bd-anchors
+  display: none
+  max-width: $sidebar-width
   padding-top: calc(1.5rem - 1px)
   +tablet
+    &.is-active
+      display: block
     &.is-pinned
       position: fixed
       top: 0
@@ -164,8 +168,6 @@
 +mobile
   .bd-side-background
     display: none
-
-$sidebar-width: 14rem
 
 +tablet
   .bd-duo
@@ -202,3 +204,11 @@ $sidebar-width: 14rem
     width: $carbon-width
   .bd-side
     padding: 3rem 0 3rem 1.5rem
+
++widescreen
+  .bd-header-carbon
+    margin-left: ($main-spacing * 3)
+
++fullhd
+  .bd-header-carbon
+    margin-left: ($main-spacing * 4)
