--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -22,6 +22,7 @@ $carbon-width: 300px
 $carbon-height: 100px
 $main-spacing: 3rem
 $intro-width: 1080px
+$sidebar-width: 14rem
 
 $navbar-item-img-max-height: none
 
