--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9686,10 +9686,15 @@ label.panel-block:hover {
 }
 
 .bd-anchors {
+  display: none;
+  max-width: 14rem;
   padding-top: calc(1.5rem - 1px);
 }
 
 @media screen and (min-width: 769px), print {
+  .bd-anchors.is-active {
+    display: block;
+  }
   .bd-anchors.is-pinned {
     position: fixed;
     top: 0;
@@ -9773,6 +9778,18 @@ label.panel-block:hover {
   }
   .bd-side {
     padding: 3rem 0 3rem 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .bd-header-carbon {
+    margin-left: 9rem;
+  }
+}
+
+@media screen and (min-width: 1472px) {
+  .bd-header-carbon {
+    margin-left: 12rem;
   }
 }
 
