--- a/docs/_includes/elements/link.html
+++ b/docs/_includes/elements/link.html
@@ -2,7 +2,7 @@
   <h2 class="bd-link-name">
     <figure class="bd-link-figure">
       {% if include.icon %}
-        <span class="bd-link-icon has-text-{{ include.color }}">
+        <span class="bd-link-icon has-text-{% if include.color %}{{ include.color }}{% else %}link{% endif %}">
           <i class="{% if include.icon_brand %}fab{% elsif include.icon_regular %}far{% else %}fas{% endif %} fa-{{ include.icon }}"></i>
         </span>
       {% else %}
