--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -184,6 +184,9 @@
 .has-text-orange
   color: $orange !important
 
+.has-text-purple
+  color: $purple !important
+
 .has-text-bootstrap
   color: $bootstrap !important
 
