--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -11229,6 +11229,10 @@ svg {
   color: #ff470f !important;
 }
 
+.has-text-purple {
+  color: #b86bff !important;
+}
+
 .has-text-bootstrap {
   color: #6f5499 !important;
 }
