Add navbar icon only child

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6494,6 +6494,12 @@ body.has-navbar-fixed-bottom {
   position: relative;
 }
 
+.navbar-item .icon:only-child,
+.navbar-link .icon:only-child {
+  margin-left: -0.25rem;
+  margin-right: -0.25rem;
+}
+
 a.navbar-item,
 .navbar-link {
   cursor: pointer;
