--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -153,10 +153,13 @@ body
   line-height: 1.5
   padding: 0.5rem 0.75rem
   position: relative
+  .icon
+    &:only-child
+      margin-left: -0.25rem
+      margin-right: -0.25rem
 
 a.navbar-item,
 .navbar-link
-  // background-color: coral
   cursor: pointer
   &:hover,
   &.is-active
