--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -141,17 +141,20 @@
   @extend %unselectable
 
 %arrow
-  border: 1px solid transparent
+  border: 3px solid transparent
+  border-radius: 2px
   border-right: 0
   border-top: 0
   content: " "
   display: block
-  height: 0.5em
+  height: 0.625em
+  margin-top: -0.4375em
   pointer-events: none
   position: absolute
+  top: 50%
   transform: rotate(-45deg)
   transform-origin: center
-  width: 0.5em
+  width: 0.625em
 
 =arrow($color)
   @extend %arrow
